--- a/srophe-app/build.xml
+++ b/srophe-app/build.xml
@@ -2,7 +2,7 @@
 <project default="xar" name="srophe">
     <xmlproperty file="expath-pkg.xml"/>
     <property name="project.version" value="${package(version)}"/>
-    <property name="project.app" value="srophe"/>
+    <property name="project.app" value="geo"/>
     <property name="build.dir" value="build"/>
     <target name="xar">
         <mkdir dir="${build.dir}"/>
